cabal-version:  2.4
name:           pier-core
version:        0.3.0.0
synopsis:       A library for writing forwards-declared build systems in haskell.
description:    A library for writing build systems in Haskell, built on top of
                <http://shakebuild.com Shake>.
                .
                Pier provides a generic approach to building and caching file outputs.
                It enables build actions to be written in a "forwards" style, which
                generally leads to simpler logic than backwards-defined build systems
                such as make or (normal) Shake, where each step of the build logic must
                be written as a new build rule.
                .
                For more details of the API, start with "Pier.Core.Artifact".
                .
                See <https://hackage.haskell.org/package/pier pier> for information
                on the Haskell build tool that uses this package.
category:       Development
homepage:       https://github.com/judah/pier#readme
bug-reports:    https://github.com/judah/pier/issues
maintainer:     judah.jacobson@gmail.com
license:        BSD-3-Clause
license-file:   LICENSE

source-repository head
  type: git
  location: https://github.com/judah/pier

library
  exposed-modules:
      Pier.Core.Artifact
      Pier.Core.Download
      Pier.Core.Persistent
      Pier.Core.Run
  other-modules:
      Pier.Core.Internal.Directory
      Pier.Core.Internal.HashableSet
      Pier.Core.Internal.Store
  hs-source-dirs:
      src
  default-extensions:
      BangPatterns
      DeriveGeneric
      FlexibleContexts
      LambdaCase
      MultiWayIf
      NondecreasingIndentation
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
      TypeFamilies
      TypeSynonymInstances
  build-depends:
      base              ^>= 4.14.3.0
    , base64-bytestring ^>= 1.2.1.0
    , binary            ^>= 0.8.8.0
    , bytestring        ^>= 0.10.12.0
    , containers        ^>= 0.6.5.1
    , cryptohash-sha256 ^>= 0.11.102.1
    , directory         ^>= 1.3.6.0
    , hashable          ^>= 1.4.0.2
    , http-client       ^>= 0.7.11
    , http-client-tls   ^>= 0.3.6.1
    , http-types        ^>= 0.12.3
    , process           ^>= 1.6.13.2
    , shake             ^>= 0.19.6
    , temporary         ^>= 1.3
    , text              ^>= 1.2.4.1
    , unix              ^>= 2.7.2.2
  default-language: Haskell2010
