cabal-version:  2.4
name:           pier
version:        0.3.0.0
synopsis:       Yet another Haskell build system.
description:    Pier is a command-line tool for building Haskell projects.  It is
                similar in purpose to <https://www.haskellstack.org Stack>,
                but explores a different design:
                .
                * Pier implements the fine-grained Haskell build logic from (nearly)
                  scratch.  In contrast, Stack relies on Cabal to implement most of its
                  build steps, giving it a more coarse control over the build.
                * Pier uses general-purpose libraries for implementing build systems, namely
                  <https://shakebuild.com Shake> and <https://hackage.haskell.org/package/pier-core pier-core>.
                .
                For more information, see the official <https://github.com/judah/pier/blob/master/Readme.md documentation>.
category:       Development
homepage:       https://github.com/judah/pier#readme
bug-reports:    https://github.com/judah/pier/issues
maintainer:     judah.jacobson@gmail.com
license:        BSD-3-Clause
license-file:   LICENSE

source-repository head
  type: git
  location: https://github.com/judah/pier

executable pier
  main-is: Main.hs
  other-modules:
      Pier.Build.CFlags
      Pier.Build.Components
      Pier.Build.Config
      Pier.Build.ConfiguredPackage
      Pier.Build.Custom
      Pier.Build.Executable
      Pier.Build.Module
      Pier.Build.Package
      Pier.Build.Stackage
      Pier.Build.TargetInfo
      Pier.Orphans
      Paths_pier
  hs-source-dirs:
      src
  default-extensions:
      BangPatterns
      DeriveGeneric
      FlexibleContexts
      LambdaCase
      MultiWayIf
      NondecreasingIndentation
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
      TypeFamilies
      TypeSynonymInstances
  ghc-options: -threaded -with-rtsopts=-I0
  build-depends:
      Cabal                ^>= 3.2.1.0
    , aeson                ^>= 2.0.3.0
    , base                 ^>= 4.14.3.0
    , binary               ^>= 0.8.8.0
    , binary-orphans       ^>= 1.0.2
    , bytestring           ^>= 0.10.12.0
    , containers           ^>= 0.6.5.1
    , directory            ^>= 1.3.6.0
    , hashable             ^>= 1.4.0.2
    , optparse-applicative ^>= 0.17.0.0
    , pier-core            ^>= 0.3.0.0
    , shake                ^>= 0.19.6
    , split                ^>= 0.2.3.4
    , text                 ^>= 1.2.4.1
    , transformers         ^>= 0.5.6.2
    , unordered-containers ^>= 0.2.19.1
    , yaml                 ^>= 0.11.8.0
  if os(darwin)
    ghc-options: -optP-Wno-nonportable-include-path
  default-language: Haskell2010
